# cn334-final

backend/: .env.example  README.md  docker-compose.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 602fd166ccc8_add_user_table.py  b776bca0b7bc_add_products_table.py  f89000f9e8ee_add_cart_table.py
backend/products/: Dockerfile  pyproject.toml  requirements.txt
backend/products/app/: crud.py  main.py
backend/products/app/routers/: products.py
backend/users/: Dockerfile  pyproject.toml  requirements.txt
backend/users/app/: crud.py  db.py  main.py
backend/users/app/models/: auth.py  carts.py  products.py  user.py
backend/users/app/routers/: auth.py  carts.py  users.py
backend/users/app/services/: auth.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/assets/: products.js  topsellers.js
frontend/src/components/cartItems/: CartItems.css  CartItems.jsx
frontend/src/components/footer/: Footer.css  Footer.jsx
frontend/src/components/guarantee/: Guarantee.css  Guarantee.jsx
frontend/src/components/hero/: Hero.css  Hero.jsx
frontend/src/components/item/: Item.css  Item.jsx
frontend/src/components/navbar/: Navbar.css  Navbar.jsx
frontend/src/components/productDisplay/: ProductDisplay.css  ProductDisplay.jsx
frontend/src/components/topsellers/: Topsellers.css  Topsellers.jsx
frontend/src/context/: ShopContext.jsx
frontend/src/pages/: AllProducts.jsx  Category.jsx  Home.jsx  Login.jsx  Product.jsx
frontend/src/pages/css/: Category.css  (+1 more)
